# scheduler/api/internal/docs/swagger.json
@@ -78,13 +78,6 @@
                         "description": "排序，\"column [desc]\"",
                         "name": "order",
                         "in": "query"
-                    },
-                    {
-                        "minimum": 1,
-                        "type": "integer",
-                        "description": "保存的天数",
-                        "name": "saveDays",
-                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -471,6 +464,10 @@
                     "description": "数据库的创建时间，时间戳，",
                     "type": "integer"
                 },
+                "data": {
+                    "description": "保存的天数",
+                    "type": "string"
+                },
                 "enable": {
                     "description": "是否禁用\n0: 禁用\n1: 启用",
                     "type": "integer"
@@ -486,10 +483,6 @@
                 "peroids": {
                     "description": "是一个 RecordTime 的 JSON 数组",
                     "type": "string"
-                },
-                "saveDays": {
-                    "description": "保存的天数",
-                    "type": "integer"
                 },
                 "updatedAt": {
                     "description": "数据库的更新时间",
@@ -557,6 +550,10 @@
                 "peroids"
             ],
             "properties": {
+                "data": {
+                    "description": "附加的数据",
+                    "type": "string"
+                },
                 "enable": {
                     "description": "是否禁用\n0: 禁用\n1: 启用",
                     "type": "integer",
@@ -581,11 +578,6 @@
                             "$ref": "#/definitions/db.TimePeroid"
                         }
                     }
-                },
-                "saveDays": {
-                    "description": "保存的天数",
-                    "type": "integer",
-                    "minimum": 1
                 }
             }
         },
@@ -596,6 +588,10 @@
                 "peroids"
             ],
             "properties": {
+                "data": {
+                    "description": "附加的数据",
+                    "type": "string"
+                },
                 "enable": {
                     "description": "是否禁用，默认是 1\n0: 禁用\n1: 启用",
                     "type": "integer",
@@ -620,11 +616,6 @@
                             "$ref": "#/definitions/db.TimePeroid"
                         }
                     }
-                },
-                "saveDays": {
-                    "description": "保存的天数，默认是 1",
-                    "type": "integer",
-                    "minimum": 1
                 }
             }
         }
