# scheduler/api/week_plans/patch.go
@@ -18,10 +18,10 @@ type patchReq struct {
 	// 0: 禁用
 	// 1: 启用
 	Enable *int8 `json:"enable" binding:"omitempty,oneof=0 1"`
-	// 保存的天数
-	SaveDays *uint32 `json:"saveDays" binding:"omitempty,min=1"`
 	// 一周的时间数组
 	Peroids [][]*db.TimePeroid `json:"peroids" binding:"omitempty,min=1,max=7,dive,required,min=1,dive"`
+	// 附加的数据
+	Data *string `json:"data" binding:"omitempty"`
 }
 
 //	@Summary	修改
